# fair_solutions_demos

./: Dockerfile  README.md  app.py  pyproject.toml
services/: claims_service.py  doi_service.py  enrichment_service.py  fdo_service.py  nanopublication_service.py  seanoe_service.py  sextant_service.py
steps/fair_dataset/: step_1_fair_dataset.py  step_2_url.py  step_3_fdo.py
steps/fair_publication/: step_1_fair_object.py  step_2_resource_source.py  step_3_doi.py  step_3_pdf.py  step_4_claims.py  step_5_nanopublication.py  step_6_enrichment.py  step_7_fdo.py  step_add_metadata_manually.py
utils/: fair_publication_state.py  logging_config.py
views/: overview.py  page_fs_1.py  page_fs_2.py  page_fs_3.py  page_fs_4.py
