[tool.poetry]
name = "fair_solutions_demos"
version = "0.1.0"
description = "Streamlit multipage demo app managed with Poetry"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.10"
streamlit = "^1.25.0"
requests = "^2.31.0"
rdflib = "^7.2.1"
rohub = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

